--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /WebApplication1/.vs/WebApplication1
+/WebApplication1/WebApplication1/bin/Debug/netcoreapp3.1
